<resources>
    <string name="app_name">PocketCleric</string>
    <string name="get_connected_devices">get connected devices</string>
    <string name="connected_devices">connected devices</string>
    <string name="provide_hotspot">provide hotspot</string>
    <string name="access_hotspot">access hotspot</string>
    <string name="enable">enable</string>
    <string name="disable">disable</string>
    <string name="hotspot">PocketCleric</string>
    <string name="status">status</string>
    <string name="chat">chat</string>

    <string name="tetherer_label">PocketCleric</string>
    <string name="tetherer_search">Search</string>
    <string name="already_registered">I already have an account</string>

    <string name="text_size">16dp</string>

    <string name="signup_label">Sign Up</string>
    <string name="signup_submit">Submit</string>

    <string name="signup_username">Username</string>
    <string name="signup_username_hint">Please choose a username</string>
    <string name="signup_password">Password</string>
    <string name="signup_password_hint">Please choose a password</string>
    <string name="signup_password2_hint">Re-enter your password</string>

    <string name="login_label">Log In</string>
    <string name="login_submit">Log In</string>
    <string name="login_guest_submit">Guest</string>

    <string name="login_username">Username</string>
    <string name="login_username_hint">Enter your username</string>
    <string name="login_password">Password</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="login_register">Create A New Account</string>

    <string name="receptor_title">Guest</string>

    <string name="settings_label">Settings</string>
    <string name="settings_submit">Save Settings</string>

    <string name="settings_background_color">Welcome Background Color</string>
    <string name="settings_background_color_hint">Enter a background color</string>
    <string name="settings_text_color">Welcome Text Color</string>
    <string name="settings_text_color_hint">Enter a text color</string>
    <string name="settings_text_size">Welcome Text Size</string>
    <string name="settings_text_size_hint">16</string>


    <string name="received">
		<u>Received</u>
	</string>
    <string name="sent">
		<u>Sent</u>
	</string>
    <string name="total_header"><u>Total</u></string>
    <string name="latest">Latest</string>
    <string name="previous">Previous</string>
    <string name="delta">Delta</string>
    <string name="tether_header"><u>Tether</u></string>
    <string name="tether_latest">Latest</string>
    <string name="tether_previous">Previous</string>
    <string name="tether_delta">Delta</string>
    <string name="device"><i>(device)</i></string>

    <string name="row_mac_address">mac address</string>
    <string name="row_device">device</string>
    <string name="row_disconnected">disconnected</string>

    <string name="pulse">Pulse</string>
    <string name="logout">Logout</string>
    <string name="guest_label">Guest</string>
</resources>
