<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tetherer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.alanzheng.pocketcleric.TethererActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onEnable"
            android:text="@string/enable" />

        <Button
            android:id="@+id/button_disable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onDisable"
            android:text="@string/disable" />

        <Button
            android:id="@+id/button_traffic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goToTrafficMonitorActivity"
            android:text="Traffic"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_pulse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPulse"
            android:text="@string/pulse"
            android:visibility="visible" />

        <Button
            android:id="@+id/button_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onLogout"
            android:text="@string/logout" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_status"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="10dp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:text="Placeholder"
            android:id="@+id/textview_rx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="12dp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:text="Placeholder"
            android:id="@+id/textview_tx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="12dp"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_searchbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/searchbarEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:layout_weight="2"
            android:ems="10"
            android:hint="http://youtube.com"
            android:inputType="textPersonName"
            android:text="http://" />

        <Button
            android:id="@+id/browseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="handleSearch"
            android:text="@string/tetherer_search" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_iframe"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="4"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <WebView
            android:id="@+id/tethererWebView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearlayout_devices"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_connected_devices_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_marginBottom="3dp"
                android:text="@string/connected_devices"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_client_devices"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:layoutManager="LinearLayoutManager" />

            <Button
                android:id="@+id/button_get_connected_devices"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginTop="4dp"
                android:onClick="getConnectedDevices"
                android:text="@string/get_connected_devices"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_chat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textview_chat_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/chat"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
